--- a/manuscripts/24-jb-dags/24-jb-measurement-sample-restriction.qmd
+++ b/manuscripts/24-jb-dags/24-jb-measurement-sample-restriction.qmd
@@ -426,6 +426,20 @@ There is much confusion about the topic of 'selection bias', however, there need
 
 - **Censored sample population**: the population from which the censored units are drawn. Censoring is uninformative if, for everyone in the baseline population, there is no effect of treatment (the sharp causal null hypothesis). Censoring is informative if there is an effect of the treatment, and this effect varies in at least one stratum of the baseline population. Note that uninformative censoring does not ensure valid inference for the target population even when valid inference is ensured for the baseline population. If the baseline population differs in the distribution of those features that modify the effect of the treatment, and no correction is applied, unbiased effect estimates for the baseline population will nevertheless be biased for the target population in at least one measure of effect [@greenland2009commentary; @lash2020]. This is why it is important for investigators to state a causal effect of interest with respect to *the full data* that includes the counterfactual quantities for the treatments to be compared in a clearly defined target population and with a specific causal contrast [@westreich2017].
 
+- **Marginal effect**: synonym for the average treatment effect.
+
+- **Intention-to-treat effect**: the effect of random treatment assignment.
+
+- **Per-protocol effect**: the effect of adherence to a randomly assigned
+treatment assignment if adherence were perfect [@hernan2017per].
+We have no guarantee that the intention-to-treat effect will be
+the same as the per-protocol effect. A safe assumption is that:
+$\widehat{ATE}_{\text{target}}^{\text{Per-Protocol}} \ne \widehat{ATE}_{\text{target}}^{\text{Intention-to-Treat}}$.
+
+
+When evaluating evidence for causality, in addition to specifying their causal contrast, effect measure, and target population, they should
+specify whether they are estimating an intention-to-treat or per-protocol effect [@hernán2004; @tripepi2007]. 
+
 
 Please note that terminology slighly varies for these concepts (see: @dahabreh2021study; @imai2008misunderstandings; @cole2010generalizing; @westreich2017transportability). A clear decomposition of key concepts need to assess generalisability is given in @imai2008misunderstandings. For a less technical, pragmatically useful discussion see:  @stuart2018generalizability.
 
@@ -449,7 +463,7 @@ Five Structural Sources of Right-Censoring Bias
 
 Suppose investigators are interested in whether religious service attendance affects volunteering. Suppose that an unmeasured variable, loyality, affects religious service attendance, attrition, and volunteering.  The structure of this bias reveals an open backdoor path from from the treatment to the outcome. 
 
-Recall our measurement error causal diagrams. The structure we observe here is one of correlated measurement errors (@tbl-terminologymeasurementerror $\mathcal{G}_3$)
+Recall our measurement error causal diagrams. The structure we observe here is one of correlated measurement errors (@tbl-terminologymeasurementerror $\mathcal{G}_3$). In this example, attrition may exacerbate measurement error bias. 
 
 
 
@@ -457,11 +471,13 @@ Recall our measurement error causal diagrams. The structure we observe here is o
 
 @tbl-terminologycensoring $\mathcal{G}_2$ illustrates confounding bias in which the treatment affects the censoring process. 
 
-Suppose that investigators are interested in estimating the per protocol effect -- the effect of the treatment, not the effect of randomisation.  
+Consider a study investigating the effects of mediation on volunteering. Suppose there is no treatment effect of meditation on volunteering, but that meditation affects social desirability, and that social desirability affects both attrition and reported volunteering. 
 
-Randomisation ensures no backdoor paths.  However, if randomisation affects attrition, then observed outcomes, the potential outcomes of the population at baseline $Y(a)$ may from those of the censored population at the end of study $Y'(a)$ such that $Y'(a) \neq Y(a)$.  For example imagine the treatment buddhist medation and the outcome is well-being.  If the well-being of meditation fostered buddha-like detachement, then observed outcomes at the end of study might under-rate the effectiveness of meditation in fostering well-being. 
 
-Recall again our measurement error causal diagrams. The structure we observe here is one of directed uncorrelated measurement error (@tbl-terminologymeasurementerror $\mathcal{G}_4$)
+Recall our measurement error causal diagrams. The structure we observe here is one of directed uncorrelated measurement error (@tbl-terminologymeasurementerror $\mathcal{G}_4$). Randomisation ensures no backdoor paths.  However, if the intervention affects both attrition and bias in the outcome, this may exacerbate measurement error bias.  
+
+
+Consider a study investigating the effects of mediation on well-being. Suppose there is no treatment effect but that Buddha-like detachment increases attrition. If $\mathcal{G}_4$ faithfully represents reality, there will be no bias in the treatment effect estimate. That is, there will be no risk that attrition will induce the appearance of a causa effect in its absence. 
 
 
 ### Example 3: No treatment effect when outcome causing censoring 
@@ -469,32 +485,28 @@ Recall again our measurement error causal diagrams. The structure we observe her
 @tbl-terminologycensoring $\mathcal{G}_3$ illustrates the structure of bias when there is no treatment effect yet the outcome affects censoring. 
 
 
+ If $\mathcal{G}_3$ faithfully represents reality, there will be no bias in the treatment effect estimate from attrition, even if there is measurement error in the outcome. Recall again our measurement error causal diagrams. The structure we observe here is one of undirected uncorrelated measurement error (@tbl-terminologymeasurementerror $\mathcal{G}_1$). Here, we would not expect attrition to induce or exaggerate the appearance of a causal effect in its absence, for the same reason that uncorrelated treatment errors. However $\mathcal{G}_3$ assumes a sharp null (no arrow from $A\to Y$ for any individual). If we believed in the sharp null we would not be motivated to conduct the experiment.  
 
-Recall again our measurement error causal diagrams. The structure we observe here is one of undirected uncorrelated measurement error (@tbl-terminologymeasurementerror $\mathcal{G}_1$)
+
 
 
 ### Example 4: Treatment effect when outcome causes censoring and there is a true treatment effect
 
+@tbl-terminologycensoring $\mathcal{G}_4$ illustrates the structure of bias when the outcome affects censoring in the presence of a treatment effect. In contrast to the previous example, here there is scope for confounding bias. 
 
-Again consider a study investigating the effects of mediation on well-being. Suppose there is no treatment effect but that buddha-like detachment increases attrition. If $\mathcal{G}_4$ faithfully represents reality, there will be no bias in the treatment effect estimate. That is, there will be no risk that attrition will induce the appearance of a causa effect in its absence. 
-
-
-@tbl-terminologycensoring $\mathcal{G}_3$ illustrates the structure of bias when the outcome affects censoring in the presence of a treatment effect. In contrast to the previous example, here there is scope for confounding bias. 
+Consider again a study investigating the effects of mediation on well-being. This time suppose that Buddha-like detachment affects attrition. As such, the investigators will observe a restricted range of effect in the sample at the end of study compared to the sample at the start of the study.  The structure of bias in this example is not one of measurement error.  Rather, there is confounding of the per-protocal effect of the meditation on well-being.  Note that if the randomisation were successful, the 'intent-to-treat' effect would be unbiased.
 
  
 ### Example 5: Treatment effect and effect-modifiers differ in censored (restriction bias without confounding)
 
 
-@tbl-terminologycensoring $\mathcal{G}_6$ 
+@tbl-terminologycensoring $\mathcal{G}_5$ represents a setting in which there is a true treatment effect, but the distribution of effect-modifiers -- variables that interact with the treatment -- differ among the sample at baseline and the sample at the end of study. Knowing nothing else, we might expect this setting to be standard.  Where measured variables are sufficient to predict attrition, that is, where missingness is at random, we can obtain valid estimates for a treatment effect by inverse probability of treatment weighting [@cole2008; @leyrat2021]. In this approach, the sample gives more weight to under-represented individuals owing to drop-out. As with missing data imputation, IPW with censoring weights also assumes that we can correctly model the missingness from the observed data [@shiba2021].However, if missingness is not completely at random, then identification may be compromised [@tchetgen2017general; @malinsky2022semiparametric].   
 
-<!-- {{< pagebreak >}} -->
+{{< pagebreak >}}
 
 
 ## Part 3: Selection-Restriction Bias at Baseline (Left-Censoring)
-
-
-
-###  Sample-Restriction Bias Considered as Collider Stratification Bias
+###  Sample-Restriction Bias Considered as Collider-Restriction Bias
 
 ::: {#tbl-terminologyselectionrestrictionclassic}
 ```{=latex}
@@ -504,34 +516,132 @@ Collider-Stratification bias at start of study ('M-bias')
 :::
 
 
-@tbl-terminologycensoring $\mathcal{G}_6$ 
+
+@tbl-terminologyselectionrestrictionclassic $\mathcal{G}_1$ illustrates an example of sample restriction bias at baseline in which there is collider-restriction bias
+
+Suppose investigators what to estimate the causal effects of regular physical activity, $A$, and heart health $Y$, in adults. Their design:
+
+**Target population**: all adults in a given city.
+
+**Source population**: adults visiting a network of community health centers for routine check-ups.
+
+**Selection for Study ($T = 1$)**: participants are selected based on their willingness to participate in a health survey conducted at these centers. Suppose the analytic sample is representative of this source population, and the source and target poulation converge, such $Pr(D = 1) = Pr(S = 1) = Pr(T)$
+
+Suppose there are two unmeasured variables: 
+
+1. Health Awareness, $U1$, an unmeasured variable that influences both the probability of participating in the study,$\boxed{S = 1}$ and being physically active, $A$.  We assume that people with higher health awareness are both more likely to engage in physical activity and to participate in health-related studies.
+
+2. Socioeconomic Status (SES), $U2$, an unmeasured variable that influences both the probability of participating in the study, $\boxed{S = 1}$ and heart health, $Y$. We assume that individuals with higher SES have better access to healthcare and are more likely to participate in health surveys; they also tend to have better heart health from healthy lifestyles: joining expensive gyms, juicing, long vacations, and the like.
+ 
+As presented in @tbl-terminologyselectionrestrictionclassic $\mathcal{G}_1$, there is collider restriction bias from conditioning on $T=1$ 
+
+1. **$U1$**: because individuals with higher health awareness are more likely to be both physically active and participate in the study, the subsample over-represents physically active individuals. This overestimates the prevalence of physical activity, setting up a bias in overstating the potential benefits of physical activity on heart health in the general population.
+
+2. **$U2$**: because individuals with higher health awareness may have better heart health from SES-related factors, this opens a confounding path from physical activity and heart health through the selected sample, setting up the investigators for the potentially erroneous inference that physical activity has a greater positive impact on heart health than it actually does in the general population. The actual effect of physical activity on heart health in the general population might be less pronounced than observed.
 
 
+It might seem as though researchers need to sample from the target population, the sub-sample will not work.  However, by adjusting for health awareness or SES, or a proxy of either, researchers may block the open path between. @tbl-terminologyselectionrestrictionclassic $\mathcal{G}_2$ presents this sollution. This strategy will only provide an unbiased effect estimate for the population if either there is no causal effect for all strata of the selected sample (the sharp null hypothesis) or there are no interactions between the distribution of effect modifiers in the sample population and the target population.  The next series of examples illustrates challenges to obtaining valid causal effect estimates in the presence of interactions. 
 
-::: {#tbl-terminologyselectionrestrictionbaseline
-}
+
+### Sample-Restriction Bias Without Collider-Restriction Bias
+
+#### Generalisability
+
+We say a study's findings generalise to a target population if the effects observed in the study group are also valid for the target group for structurally valid reasons (i.e. non-accidentally).
+
+Clearly, the similarity of the source population to the target population in study-relevant characteristics enhances the applicability of the findings to the target population.
+
+Suppose we sample randomly from the target population where,
+
+-   $n_S$ denotes the size of the study sample $S$.
+-   $N_T$ denotes the total size of the target population $T$.
+-   $\hat{ATE}_{S}$ denotes the estimated average treatment effect in the study sample.
+-   $\hat{ATE}_{T}$ denotes the estimated average treatment effect in the target population.
+
+Assuming the rest of a causal inference workflow goes to plan (randomisation succeeds, there is no measurement error, no model misspecification, etc), as the random sample size $n_S$ increases over the target population $N_T$, the estimated treatment effect in $S$ converges to that in $T$:
+
+$$
+\lim_{n_S \to N_T} \hat{ATE}_{S} = \hat{ATE}_{T}
+$$
+
+#### Transportability
+
+Sometimes the target population is the general population of interest from which researchers have sample. Where results are valid, they will generalise to this general population. Often the population of interest is often some 'trial eligible' population, not a general population.
+
+For example, suppose our scientific question pertains to a restricted population, such as first year North American university students. If we were to successful sample from globally diverse population, the sample treatment effect might not transport to the trail eligible population of North American university students. In this setting, researchers should be discouraged from sampling from a global population, no matter what the public incentives, because doing so will lead to bias, or a need for corrections.
+
+However, for many scientific questions, the target population differs from the source population. Although the concept of a 'target population' is critical for interpreting our results, this concept cannot be expressed absolutely. Rather, it is relative to the scientific interests and purposes at hand. The closer we sample from the target population the less results will rely on methods for adjustment, which carry the burdens of model misspecification bias.
+
+Suppose we have not randomly sampled from the target population such that $S$ is not a subset of $T$.
+
+Define,
+
+-   $\hat{ATE}_{S}$ as the estimated average treatment effect in the study sample $S$.
+-   $\hat{ATE}_{T}$ as the estimated average treatment effect in the target population $T$.
+-   $f(S, R)$ as the mapping function over $S$ using a measured set of variables $R$ that permits valid projection of the source ATE to the population ATE.
+
+$$
+\hat{ATE}_{S} \xrightarrow{f(S, R)} \hat{ATE}_{T}
+$$
+
+All problems in adjusting for sampling bias are problems of obtaining a satisfactory function for such transportation.
+
+**Source bias or "Sample-Restriction-at-Baseline Bias** occurs when the sample populationg (source population) does not accurately represent the group of interest (target population) in the distribution of variables that modify treatments effects.  Such bias occurs because the selection into the study occurs on an effect modifier for the effect of the exposure on the outcome. Note that although the causal effect of $A\to Y$ is unbiased for the exposed and unexposed in the source population, the effect estimate does not generalise to the exposed and unexposed in the target population. Although there is no confounding, causal inferences in this scenario do not generalise as we might hope [@suzuki2016; @suzuki2014; @suzuki2020]. 
+
+**Appendix B** provides a simulation that illustrates the bias.  **Appendix C** provides a mathmatical explanation.
+
+::: {#tbl-terminologyselectionrestrictionbaseline}
 ```{=latex}
 \terminologyselectionrestrictionbaseline
 ```
-Collider-Stratification bias at start of study ('M-bias')
+The association in the population of selected individuals differs from the causal association for the target population. Hernán calls this scenario "selection bias off the null" [@hernán2017]. Lu et al. call this scenario "Type 2 selection bias" [@lu2022]. We call this bias "Sample-Restriction Bias at Baseline."
 :::
-
-
 
 
 ### Problem 1:   Target population is not WEIRD; sample population is WEIRD
 
-@tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{1.1}$
 
-@tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{1.2}$
+@tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{1.1}$  presents a scenario in which there is source bias for the population parameter. When that sample we obtain at baseline differs from the target population, and where the distributions of variables that modify treatment differ between the sample and target populations, effect-estimates may be biased, even in the absence of confounding bias. 
+
+Example: we want to take 'the difficult steps to building a broader, richer, and better-grounded understanding of our species' but have sampled from a pool of undergraduate students.  For many questions, causal effect estimates in this sample population will not generalise to the target popultion. 
+
+We might decide to adjust expectations, and not attempt species-level generalisations. 
+
+Or we might decide to sample more widely from our local population, and, where possible, weight the sample to better recover the population parameters of interest for our target sample. To obtain weighted estimates for the target population, we must first defined by eligibility criteria.  If the baseline population differs from the target population, where sample weights for the distribution of covariates are available for the *target population*, these should be applied to the baseline population [with caution, given potential for model mis-specification, see @stuart2015.]
+
+Let $\widehat{ATE}_{target}$ denote the population average treatment
+effect for the target population. Let $\widehat{ATE}_{\text{restricted}}$ denote the average treatment effect at the end of treatment. Let $W$ denote a set of variables upon which the restricted and target populations structurally differ. We say that
+results *generalise* if we can guarantee that:
+
+$$
+\widehat{ATE}_{target} =  \widehat{ATE}_{restricted} 
+$$
+
+or if there is a known function such that:
+
+$$
+ATE_{target}\approx  f_W(ATE_{\text{restricted}}, W)
+$$
+
+In most cases, $f_W$ will be unknown, as it must account for potential
+heterogeneity of effects and unobserved sources of bias. For further
+discussion on this topic, see: @imai2008misunderstandings;
+@cole2010generalizing; @stuart2018generalizability
+
+
+
+ Suppose we take the bold option and sample from the species. @tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{1.2}$ projects this scenario.  What would this recover?  If there is considerable heterogeneity, then we might not know how to interpret the average treatment effect that we recover.  Put differently, we might not be able to interpret how the quantity we obtain relates to WEIRD population, or any specific culture for that matter. To obtain such effects we would need to model treatment heterogeneity. If we seek explicity comparative models we will need to ensure validity for every sample that we compare. 
+
 
 
 ### Example 2:  Target population is WEIRD; sample population is not WEIRD
 
-@tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{2.1}$
+@tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{2.1}$ presents a scenario in which there the source population does not meet eligibility criteria. Consider again the question of whether vascectomy affects a sense of meaning and purpose in life.  Suppose further we want to evaluate effects in New Zealand among men over the age of 40 who have no prior history of vasectomy, who are in relationships with heterosexual partners. The target population is weirder than WEIRD, in the sense it must be narrower.  We should not sample from young children, the elderly, and any who do not qualify.  For many scientific questions, a narrow population us desirable. 
 
-@tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{2.2}$
 
+Note that @tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{2.1}$ is identical to @tbl-terminologycensoring $\mathcal{G}_5$ -- right-censoring bias with effect modifiers in an otherwise unconfounded study. The problem is formally the same: source-target population mismatch. However, whereas in the previous setting, mismatch arose from panel attrition. The sample at baseline was matched. Here there is a mismatch at baseline. 
+
+@tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_{2.2}$ presents a solution. Ensure eligibility criteria are sensible and clear. Sample from the eligible population. With caution, apply survey or other weights if available, where these weights enable a closer approximate to the distributions of effect-modifiers in the target population. 
 
 
 ### Example 3: Correlated measurement error of effect-modifiers for an overly ambitious target population
@@ -597,3 +707,202 @@ Errors are my own.
 Glossary
 :::
 
+{{< pagebreak >}}
+
+
+## Appendix B: R Simulation to Clarify Why The Distribution of Effect Modifiers Matter For Estimating Treatment Effects For A Target Population
+
+First, we load the `stdReg` library, which obtains marginal effect estimates by simulating counterfactuals under different levels of treatment [@sjölander2016]. If a treatment is continuous, the levels can be specified. 
+
+We also load the `parameters` library, which creates nice tables [@parameters2020].
+
+
+```{r}
+# to obtain marginal effects
+if (!requireNamespace("stdReg", quietly = TRUE)) install.packages("stdReg")
+library(stdReg)
+
+# to create nice tables
+if (!requireNamespace("parameters", quietly = TRUE)) install.packages("parameters")
+library(parameters)
+```
+
+Next, we write a function to simulate data for the sample and and target populations. 
+
+We assume the treatment effect is the same in the sample and target population. We will assume that the coefficient for the effect-modifier and the coefficient for interaction are the same.  We assume no unmeasured confounding throughout the study.  We assume only selective attrition of one effect modifier such that the baseline population differs from the sample population at the end of the study.   
+
+That is: **the distribution of effect modifiers is the only respect in which the sample will differ from the target population.**
+
+This function will generate data under a range of scenarios.[^margot]
+
+[^margot]: See documentation in the `margot` package: @margot2024
+
+
+
+```{r}
+# function to generate data for the sample and population, 
+# along with precise sample weights for the population, there are differences 
+# in the distribution of the true effect modifier but no differences in the treatment effect 
+# or the effect modification.all that differs between the sample and the population is 
+# the distribution of effect-modifiers.
+
+
+# reproducability
+set.seed(123)
+
+# simulate the data -- you can use different parameters
+data <- margot::simulate_ate_data_with_weights(
+  n_sample = 10000,
+  n_population = 100000,
+  p_z_sample = 0.1,
+  p_z_population = 0.5,
+  beta_a = 1,
+  beta_z = 2.5,
+  noise_sd = 0.5
+)
+
+skimr::skim(data)
+```
+
+We have generated both sample and population data. 
+
+Next, we verify that the distributions of effect modifiers differ in the sample and in the target population:
+
+```{r}
+# obtain the generated data
+sample_data <- data$sample_data
+population_data <- data$population_data
+
+
+# check imbalance
+table(sample_data$z_sample) # type 1 is rare
+table(population_data$z_population) # type 1 is common
+```
+
+
+
+The sample and population distributions differ. 
+
+Next, consider the question: "What are the differences in the coefficients that we obtain from the study population at the end of study, as compared with the those we would obtain for target population?"  
+
+First, we obtain the regression coefficients for the sample. They are as follows:
+
+
+```{r}
+# model coefficients sample
+model_sample  <-
+  glm(y_sample ~ a_sample * z_sample, data = sample_data)
+
+# summary
+parameters::model_parameters(model_sample, ci_method = "wald")
+```
+
+We next obtain the regression coefficients for the weighted regression of the sample.   Notice that the coefficients are virtually the same:
+
+```{r}
+# model the sample weighted to the population, again note that these coefficients are similar 
+model_weighted_sample <-
+  glm(y_sample ~  a_sample  * z_sample,
+      data = sample_data,
+      weights = weights)
+
+# summary
+summary(parameters::model_parameters(model_weighted_sample, ci_method =
+                                       "wald"))
+```
+
+
+We might be tempted to infer that weighting wasn't relevant to the analysis. However, we'll see that such an interpretation would be a mistake.
+
+
+Next, we obtain model coefficients for the population. Note again there is no difference -- only narrower errors owing to the large sample size. 
+
+
+```{r}
+# model coefficients population -- note that these coefficients are very similar. 
+model_population <-
+  glm(y_population ~ a_population * z_population, data = population_data)
+
+parameters::model_parameters(model_population, ci_method = "wald")
+```
+
+
+Again, there is no difference. That is, we find that all model coefficients are practically equivalent. The different distribution of effect modifiers does not result in different coefficient values for the treatment effect, the effect-modifier "effect," or the interaction of effect modifier and treatment. 
+
+Consider why this is the case: in a large sample where the causal effects are invariant -- as we have simulated them to be -- we will have good replication in the effect modifiers within the sample, so our statistical model can recover the *coefficients* for the population without challenge. 
+
+However, *in causal inference, we are interested in the marginal effect of the treatment. That is, we seek an estimate for the counterfactual *contrast* in which everyone in a pre-specified population was subject to one level of treatment compared with a counterfactual condition in which everyone in a population was subject to another level of the same treatment. 
+
+**When the sample population differs in the distribution of effect modifiers from the target population effect, the marginal effect estimates will typically differ.**
+
+To see this, we use the `stdReg` package to recover marginal effect estimates, comparing (1) the sample ATE, (2) the true oracle ATE for the population, and (3) the weighted sample ATE.  We will use the outputs of the same models above. The only difference is that we will calculate marginal effects from these outputs. We will contrast a difference from an intervention in which everyone receives treatment = 0 with one in which everyone receives treatment = 1, however, this choice is arbitrary, and the general lessons apply irrespective of the estimand.
+
+First, consider this Average Treatment Effect for the sample population. 
+
+```{r}
+# What inference do we draw?  We cannot say the models are unbiased for the marginal effect estimates. 
+# regression standardisation 
+library(stdReg) # to obtain marginal effects 
+
+
+# obtain sample ate
+fit_std_sample <-
+  stdReg::stdGlm(model_sample, data = sample_data, X = "a_sample")
+
+# summary
+summary(fit_std_sample,
+        contrast = "difference",
+        reference = 0)
+```
+
+The treatment effect is given as a 1.06 unit change in the outcome across the sample population, with a confidence interval from 1.04 to 1.08. 
+
+
+Next, we obtain the true (oracle) treatment effect for the population under the same intervention.
+
+```{r}
+## note the population effect is different
+
+#obtain true ate
+fit_std_population <-
+  stdReg::stdGlm(model_population, data = population_data, X = "a_population")
+
+# summary
+summary(fit_std_population,
+        contrast = "difference",
+        reference = 0)
+```
+
+
+Note, the true treatment effect is a 1.25 unit change in the population, with a confidence bound between 1.24 and 1.26. This is well outside the ATE that we obtain from the sample population!
+
+
+
+Next, consider the ATE in the weighted regression, where the sample was weighted to the target population's true distribution of effect modifiers. 
+
+```{r}
+## next try weights adjusted ate where we correctly assign population weights to the sample
+fit_std_weighted_sample_weights <- stdReg::stdGlm( model_weighted_sample, 
+    data = sample_data, 
+    X = "a_sample")
+
+# this gives us the right answer
+summary(fit_std_weighted_sample_weights, 
+    contrast = "difference", 
+    reference = 0)
+
+
+# Moral of the story. When we marginalise over the entire sample we need to weight estimates to the target population. 
+```
+
+
+We find that we obtain the population-level causal effect estimate with accurate coverage by weighting the sample to the target population. So with appropriate weights, our results generalise from the sample to the target population.
+
+
+## Lessons 
+
+- Regression coefficients do not clarify the problem of sample/target population mismatch -- or selection bias as discussed in this manuscript.
+- The correct advice to investigators is that they should not rely on regression coefficients when evaluating the biases that arise from sample attrition. This advice applies to both methods that the authors use to investigate threats of bias. That is, to implement this advice, the authors must first take it.
+- Generally, observed data are insufficient for assessing threats. Observed data do not clarify structural sources of bias, nor do they clarify effect-modification in the full counterfactual data condition in which all receive the treatment and all do not receive the treatment (at the same level).
+- To properly assess bias, one would need access to the counterfactual outcome—what would have happened to the missing participants had they not been lost to follow-up or had they responded. Again, the join distributions over "full data" are inherently unobservable [@vanderlaan2011]. 
+- In simple settings like the one we just simulated, we may address the gap between the sample and target population using methods such as modelling the censoring (e.g., censoring weighting). However, we never know what setting we are in or whether it is simple—such modelling must be handled with care. There is a large and growing epidemiology literature on this topic (see, for example, @li2023non).
